# dart-iouring-transport

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: arena_mt.c.8320779ABB086C87.idx  barrier.h.81EFE48B91855DD3.idx  config.h.2F330D347188BFEC.idx  dart_api.h.D68EC3FB86AD92A0.idx  dart_api_dl.c.6685C57BC88473E1.idx  dart_api_dl.h.3A33E39F59972943.idx  dart_api_dl_impl.h.29AFF8C3149AD6C5.idx  dart_native_api.h.BCC52B02191FEE8D.idx  dart_version.h.21F379701D4C01FE.idx  ibuf.c.9DCFC129D7458D20.idx  ibuf.c.E556F1074478CE66.idx  ibuf.h.85F1E1CA2F15E9C5.idx  io_uring.h.6416B49CF8085BDC.idx  lf_lifo.c.0F6AC25F66D2FE9C.idx  lf_lifo.h.AA31F4E3F7B9A7CC.idx  liburing.h.2667383268E81F8A.idx  lifo.h.9141E412E650BC10.idx  lsregion.c.2A56D619225662F0.idx  lsregion.c.74A8953235E60125.idx  lsregion.h.3A426F9F9A2F40EA.idx  matras.c.019D2F3FAE4DE5E4.idx  matras.cc.12806466235F65B0.idx  matras.h.7220EFDBB50B91EB.idx  memcheck.h.38AC755506DDE2A1.idx  mempool.c.AF87D6D45085DF64.idx  mempool.c.E5ABA230EFCA5632.idx  mempool.h.ED03CF552D95491E.idx  mhash.h.B6790F5F1303D535.idx  obuf.c.1853CA358EDA5B7D.idx  obuf.c.1C55074047D525C7.idx  obuf.h.851E6202DD4D5F99.idx  pmatomic.h.25DDC72BD2FDDFB6.idx  quota.cc.D5BF127C20143956.idx  quota.h.EE64C7CD92D8EBDC.idx  quota_lessor.c.BF9277FD339975D5.idx  quota_lessor.h.87CBC3F76A2CCB03.idx  rb.c.2B3CF193D5B32FC0.idx  rb.h.A8EC3968B8AC5B67.idx  rb_aug.c.C06C97B3831C237C.idx  rb_rand.cc.0BB2CA2EF9FE18B2.idx  (+47 more)
.github/workflows/: transport.yml
binding/: CMakeLists.txt  Makefile  binding_acceptor.c  binding_acceptor.h  binding_balancer.c  binding_balancer.h  binding_channel.c  binding_channel.h  binding_channel_pool.c  binding_channel_pool.h  binding_common.c  binding_common.h  binding_connection.c  binding_connection.h  binding_connector.c  binding_connector.h  binding_constants.h  binding_controller.c  binding_controller.h  binding_file.c  binding_file.h  binding_listener.c  binding_listener.h  binding_log.c  binding_log.h  binding_logger.c  binding_logger.h  binding_message.h  binding_payload.h  binding_socket.c  binding_socket.h  binding_transport.c  binding_transport.h
binding/bit/: bit.h  int96.h
binding/fiber/: assoc.c  assoc.h  cbus.c  cbus.h  clock.c  clock.h  errinj.c  errinj.h  fiber.c  fiber.h  fiber_channel.c  fiber_channel.h  fiber_cond.c  fiber_cond.h  fiber_ev.c  fiber_ev.h  fiber_pool.c  fiber_pool.h  memory.h  rmean.h  trigger.c  trigger.cc  trigger.h
binding/liburing/examples/: io_uring-udp.c
binding/liburing/test/: connect.c
binding/salad/: CMakeLists.txt  Makefile  bloom.h  fifo.h  guava.h  light.h  mhash.h  rtree.h  stailq.h
binding/small/: CMakeLists.txt
binding/small/include/small/: ibuf.h  lf_lifo.h  lifo.h  lsregion.h  matras.h  mempool.h  obuf.h  quota.h  quota_lessor.h  region.h  rlist.h  slab_arena.h  slab_cache.h  small.h  small_features.h  static.h
binding/small/small/: lsregion.c  slab_arena.c  slab_cache.c  small_config.h.cmake  small_features.c
binding/small/test/: lsregion.c  slab_arena.c  unit.h
binding/trivia/: config.h.cmake  util.h
ci/: boot.sh  build.sh  download.sh  prepare.sh  run.sh
dart/: .gitignore  file-0  file.txt  file2  out  output.txt  perf-report.sh  perf.txt  pubspec.yaml  report.perf  test.txt
dart/lib/: iouring_transport.dart
dart/lib/transport/: acceptor.dart  bindings.dart  buffers.dart  callbacks.dart  channel.dart  channels.dart  chunk.dart  client.dart  communicator.dart  configuration.dart  connection.dart  connector.dart  constants.dart  defaults.dart  error.dart  exception.dart  extensions.dart  factory.dart  file.dart  links.dart  listener.dart  logger.dart  lookup.dart  loop.dart  message.dart  model.dart  payload.dart  pool.dart  provider.dart  registry.dart  resilience.dart  retry.dart  sequences.dart  server.dart  state.dart  timeout.dart  transport.dart  worker.dart
dart/lib/transport/channels/: channel.dart  file.dart  socket.dart
dart/lib/transport/client/: client.dart  communicator.dart  configuration.dart  factory.dart  provider.dart  registry.dart
dart/test/: benchmark.dart  buffers.dart  bulk.dart  file  file.dart  generators.dart  latch.dart  shutdown.dart  tcp.dart  test.dart  timeout.dart  trace-dyn-mem  udp.dart  unix.dart  validators.dart
documentation/: docusaurus.config.ts
documentation/docs/: errors.mdx  introduction.mdx
documentation/docs/api/: 01-transport.mdx  02-configuration.mdx  03-worker.mdx  04-client.mdx  05-server.mdx  06-file.mdx  07-payload.mdx  _category_.yml
examples/: example.c
native/: CMakeLists.txt  Makefile  transport.c  transport.h  transport_acceptor.c  transport_acceptor.h  transport_buffers_pool.h  transport_channel.c  transport_channel.h  transport_channel_pool.c  transport_channel_pool.h  transport_client.c  transport_client.h  transport_collections.c  transport_collections.h  transport_common.c  transport_common.h  transport_connector.c  transport_connector.h  transport_constants.c  transport_constants.h  transport_event_loop.c  transport_event_loop.h  transport_file.c  transport_file.h  transport_listener.c  transport_listener.h  transport_listener_pool.c  transport_listener_pool.h  transport_logger.c  transport_logger.h  transport_server.c  transport_server.h  transport_socket.c  transport_socket.h  transport_transport.c  transport_transport.h  transport_worker.c  transport_worker.h
native/collections/: mhash.h
native/common/: common.h  configuration.h  configuration.h.cmake
native/dart/: dart_api.h
native/liburing/src/include/liburing/: io_uring.h
native/patches/: dart-patch-apply.sh
native/salad/: fifo.h  light.h  mhash.h
native/small/: CMakeLists.txt
native/small/include/small/: ibuf.h  lf_lifo.h  lifo.h  lsregion.h  matras.h  mempool.h  obuf.h  quota.h  quota_lessor.h  region.h  rlist.h  slab_arena.h  slab_cache.h  small.h  small_features.h  static.h
native/small/small/: slab_arena.c  slab_cache.c  small_config.h.cmake  small_features.c
native/small/test/: CMakeLists.txt  unit.h
native/trivia/: common.h  config.h  config.h.cmake  util.h
workflows/: transport.yml
(+13 files in other folders)
